# snippet-extraction

./: .gitignore  README.md
snippet_extraction/common/: README.md  pyproject.toml
snippet_extraction/common/snippets_common/: segment.py  spans.py  windowing.py
snippet_extraction/common/tests/: test_segment.py  test_spans.py  test_windowing.py
snippet_extraction/data_generation/: README.md  pyproject.toml
snippet_extraction/data_generation/data_generation/core/: __init__.py  paths.py  ratelimit.py  schema.py  segment.py
snippet_extraction/data_generation/data_generation/core/labeling/: __init__.py  clients.py  prompts.py
snippet_extraction/data_generation/data_generation/core/msmarco/: build_bm25_index.py  build_doc_index.py  doc_fetch.py  download_bm25.py
snippet_extraction/data_generation/data_generation/core/retrievers/: brave.py  exa.py  exa_align.py  firecrawl.py  tavily.py
snippet_extraction/data_generation/data_generation/core/snippet_eval/: __init__.py  harness.py  metrics.py  providers.py  stages.py  store.py
snippet_extraction/data_generation/data_generation/pipelines/: ab_labeler.py  compare_labelers.py  eval_snippets.py  eval_tavily.py  inspect_labels.py  join_queries_units.py  label_exa.py  label_msmarco.py  label_units.py  merge_ab.py  regression.py  run_pipeline.py  safely_merge_jsons.py  scrape.py  segment_documents.py  synth_queries.py  synth_queries_per_doc.py
snippet_extraction/data_generation/data_generation/pipelines/configs/: pipeline_test5.yaml  web_corpus.example.yaml
snippet_extraction/data_generation/tests/: test_assembly_pipelines.py  test_exa_align.py  test_label_units_pipeline.py  test_labeler_clients.py  test_metrics.py  test_prompts.py  test_run_pipeline.py  test_schema.py  test_scrape_pipeline.py  test_segment.py
snippet_extraction/runtime/: README.md  pyproject.toml
snippet_extraction/runtime/snippets_runtime/: inference.py  model.py
snippet_extraction/runtime/tests/: test_pool_window.py  test_pooling.py
snippet_extraction/serving/: README.md  bench_attn.py  bench_batch_tokens.py  bench_endtoend.py  bench_flame.py  bench_hw.py  bench_loadtest.py  bench_opt_app.py  bench_phases.py  bench_precision.py  bench_saturation.py  bench_sweep.py  modal_app.py  modal_app_bench.py  modal_bench.py  pyproject.toml  render_flame.py
snippet_extraction/training/: .gitignore  README.md  pyproject.toml
snippet_extraction/training/snippets_training/: bench_speed.py  compress.py  dataset.py  eval.py  model.py  predict.py  prepro.py  train.py  windowing.py
