[project]
name = "snippets-common"
version = "0.1.0"
description = "Torch-free shared core for snippet extraction: the canonical segmenter, the unit/body span contract, and the windowing/selection logic used by both training and serving."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gziz" }]
dependencies = [
    "markdown-it-py>=3.0",
    "syntok>=1.4",
    "tiktoken>=0.7",
]

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snippets_common"]
