[project]
name = "snippets-runtime"
version = "0.1.0"
description = "Torch inference runtime for the snippet compressor: the SentenceCompressor model and the (windowed, batched) compress entrypoints. Shared by training and serving so neither imports the other."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gziz" }]
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "snippets-common",
]

[tool.uv.sources]
snippets-common = { workspace = true }

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snippets_runtime"]
