[project]
name = "snippets-training"
version = "0.0.1"
description = "Sentence-level context compression training (encoder + per-sentence keep/drop head)"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "gziz" }]
dependencies = [
    "torch>=2.4",
    "transformers>=4.45",
    "datasets>=3.0",
    "accelerate>=1.0",
    "tqdm",
    "numpy",
    "python-dotenv>=1.2.2",
    "wandb>=0.27.0",
    "snippets-common",
    "snippets-runtime",
]

[tool.uv.sources]
snippets-common = { workspace = true }
snippets-runtime = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snippets_training"]
